objects/ASI_CRM_Payment_Invoice_Line_Item__c.object
<CustomObject>
    <description>ASI CRM JP - Payment Invoice Line</description>
    <fields>
        <fullName>ASI_CRM_AP_Code__c</fullName>
        <label>AP Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_A_P_Entertainment_F_D_Code__c</fullName>
        <label>A&amp;P/Ent./F&amp;D</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;P</fullName>
                    <default>true</default>
                    <label>A&amp;P</label>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>F&amp;D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Amount__c</fullName>
        <formula>ASI_CRM_Actual_Quantity__c  *  ASI_CRM_Actual_Unit_Cost__c</formula>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Quantity__c</fullName>
        <label>Actual Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Unit_Cost__c</fullName>
        <label>Actual Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Address_Number__c</fullName>
        <formula>ASI_CRM_Purchase_Contract_Line_Item__r.ASI_CRM_Pay_To__r.ASI_CRM_Pay_to_No__c</formula>
        <label>Address Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Adjustment_Amount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Auto_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BC_Code__c</fullName>
        <label>BC Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                    <default>true</default>
                    <label>B</label>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract No.</label>
        <referenceTo>ASI_CRM_Purchase_Contract__c</referenceTo>
        <relationshipLabel>Payment Invoice Line Items</relationshipLabel>
        <relationshipName>Payment_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Description_Line_2__c</fullName>
        <formula>MID((SUBSTITUTE(MID(TEXT(ASI_CRM_Payment_Invoice__r.ASI_CRM_From_Month__c),1,7), &quot;-&quot;, &quot;&quot;)&amp;&quot;/&quot;&amp;ASI_CRM_Sys_BS_Retailer_Ship_To__c),1,30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Final_Amount__c</fullName>
        <formula>ROUND(ASI_CRM_Actual_Amount__c  +  ASI_CRM_Adjustment_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Ref_No__c</fullName>
        <label>Invoice Ref No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <label>Item Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Line_Total_Amount__c</fullName>
        <formula>ASI_CRM_Final_Amount__c + ASI_CRM_Tax_Amount__c</formula>
        <label>Line Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Code__c</fullName>
        <formula>ASI_CRM_Purchase_Contract_Line_Item__r.ASI_CRM_Purchase_Contract__r.ASI_CRM_Outlet__r.ASI_CRM_CN_CRM_Code__c</formula>
        <label>Outlet Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Invoice_Item_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Invoice_Line_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Payment Invoice Line External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Invoice__c</fullName>
        <label>Payment Invoice</label>
        <referenceTo>ASI_CRM_Payment_Invoice__c</referenceTo>
        <relationshipLabel>Payment Invoice Line Items</relationshipLabel>
        <relationshipName>Payment_Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Purchase_Contract_Line_Item__c</fullName>
        <label>Contract Line</label>
        <referenceTo>ASI_CRM_Purchase_Contract_Line_Item__c</referenceTo>
        <relationshipLabel>Payment Invoice Line Items</relationshipLabel>
        <relationshipName>Payment_Invoice_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_CRM_Purchase_Order_Text__c</fullName>
        <label>Purchase Order Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remaining_Balance__c</fullName>
        <formula>ASI_CRM_Purchase_Contract_Line_Item__r.ASI_CRM_Remaining_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Representative_SKU_Code__c</fullName>
        <label>2nd Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_Business_Unit__c</fullName>
        <formula>&quot;111&quot;</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_GLC__c</fullName>
        <formula>&quot;SSSS&quot;</formula>
        <label>GLC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_Last_Stat__c</fullName>
        <formula>&quot;520&quot;</formula>
        <label>Last Stat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_Ln_Ty__c</fullName>
        <formula>&quot;DC&quot;</formula>
        <label>Ln Ty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_Next_Stat__c</fullName>
        <formula>&quot;560&quot;</formula>
        <label>Next Stat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_Or_Ty__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;ASI_CRM_JP_Indirect_Rebate_Invoice_Line_Item&apos; , IF( ASI_CRM_Actual_Quantity__c &gt; 0, &quot;42&quot;, &quot;41&quot;), null)</formula>
        <label>Or Ty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_Order_Co__c</fullName>
        <formula>&quot;00221&quot;</formula>
        <label>Order Co</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_Original_Order_Co__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Original Order Co</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_Original_Order_No__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Original Order No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_Original_Order_Type__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Original Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_Price_Over_Cd__c</fullName>
        <formula>&quot;1&quot;</formula>
        <label>Price Over Cd</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_UM__c</fullName>
        <formula>&quot;BT&quot;</formula>
        <label>UM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_VR01__c</fullName>
        <formula>MID(TEXT(ASI_CRM_Purchase_Contract_Line_Item__r.ASI_CRM_Rebate_Type__c),2,1)</formula>
        <label>VR01</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rpt_VR02__c</fullName>
        <formula>ASI_CRM_Payment_Invoice__r.Name</formula>
        <label>VR02</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Selection__c</fullName>
        <label>SKU Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Representative SKU</fullName>
                    <default>true</default>
                    <label>Representative SKU</label>
                </value>
                <value>
                    <fullName>Alternative SKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Payment Invoice Line Items</relationshipLabel>
        <relationshipName>Payment_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_Outlet__c</fullName>
        <label>Outlet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Result__c</fullName>
        <label>Promotion Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ship_To_Number__c</fullName>
        <formula>ASI_CRM_Purchase_Contract_Line_Item__r.ASI_CRM_Purchase_Contract__r.ASI_CRM_BS_Retailer_Ship_To__r.ASI_CRM_CN_JDE_Code__c</formula>
        <label>Ship To Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <formula>TEXT(ASI_CRM_Payment_Invoice__r.ASI_CRM_Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Alternative_SKU_Id__c</fullName>
        <label>Sys Alternative SKU Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Alternative_SKU__c</fullName>
        <formula>ASI_CRM_Purchase_Contract_Line_Item__r.ASI_CRM_Item_Group__r.ASI_CRM_Alternative_SKU__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys Alternative SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_BS_Retailer_Ship_To__c</fullName>
        <label>BS/Retailer/Ship To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Representative_SKU_Id__c</fullName>
        <label>Sys Representative SKU Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Representative_SKU__c</fullName>
        <formula>ASI_CRM_Purchase_Contract_Line_Item__r.ASI_CRM_Item_Group__r.ASI_CRM_Representative_SKU__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys Representative SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_is_cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Amount__c</fullName>
        <formula>ASI_CRM_Final_Amount__c *  ASI_CRM_Payment_Invoice__r.ASI_CRM_Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Invoice Line Item</label>
    <nameField>
        <displayFormat>PIL{000000}</displayFormat>
        <label>Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Invoice Line Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Indirect_Rebate_Invoice_Line_Item</fullName>
        <active>true</active>
        <label>JP Indirect Rebate Invoice Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_SPTD_Cash_Invoice_Line_Item</fullName>
        <active>true</active>
        <label>JP SPTD Cash Invoice Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_SPTD_FOC_Invoice_Line_Item</fullName>
        <active>true</active>
        <label>JP SPTD FOC Invoice Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_JP_Cant_Change_Invoice_Line</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( ASI_CRM_Payment_Invoice__r.RecordType.DeveloperName , &apos;ASI_CRM_JP&apos;) &amp;&amp; (ISCHANGED( ASI_CRM_Payment_Invoice__c ) || ISCHANGED(  ASI_CRM_Purchase_Contract_Line_Item__c ))</errorConditionFormula>
        <errorMessage>You are not allowed to update Invoice Line data</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Cant_Change_SKU_Selection</fullName>
        <active>true</active>
        <description>SKU Selection may not change if it was not set to &apos;Representative SKU&apos; or &apos;Alternative SKU&apos;</description>
        <errorConditionFormula>ISCHANGED(ASI_CRM_SKU_Selection__c) 
&amp;&amp; (ASI_CRM_Payment_Invoice__r.RecordType.Name = &quot;JP SPTD FOC Invoice Read-Only&quot;) 
&amp;&amp; (TEXT(ASI_CRM_SKU_Selection__c) = &quot;Representative SKU&quot; 
|| TEXT(ASI_CRM_SKU_Selection__c) = &quot;Alternative SKU&quot;)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_SKU_Selection__c</errorDisplayField>
        <errorMessage>SKU Selection may not change if it was not set to &apos;Representative SKU&apos; or &apos;Alternative SKU&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Cant_Enter_Negative_Quantity</fullName>
        <active>false</active>
        <errorConditionFormula>/* Prevent user to enter negative figure into actual quantity field.

Criteria: 
* Record Type match JP SPTD FOC Invoice Line Item 
* Actual quantity field has negative amount
* Bypass ETL account(PR Japan SOA)
*/ 

RecordType.DeveloperName = &apos;ASI_CRM_JP_SPTD_FOC_Invoice_Line_Item&apos; &amp;&amp; 

ASI_CRM_Actual_Quantity__c &lt; 0 &amp;&amp; 

!AND(CONTAINS($Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Object_API__c, &apos;ASI_CRM_Payment_Invoice_Line_Item__c&apos; ), ISBLANK( $Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Record_Type__c ))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Actual_Quantity__c</errorDisplayField>
        <errorMessage>Actual quantity cannot be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_EmptySKUError</fullName>
        <active>true</active>
        <errorConditionFormula>( ISNEW() ||  ISCHANGED(ASI_CRM_SKU__c) ||  ISCHANGED( ASI_CRM_SKU_Selection__c ) )&amp;&amp; ISBLANK(ASI_CRM_SKU__c)&amp;&amp; RecordType.DeveloperName = &quot;ASI_CRM_JP_SPTD_FOC_Invoice_Line_Item&quot;</errorConditionFormula>
        <errorDisplayField>ASI_CRM_SKU__c</errorDisplayField>
        <errorMessage>SKU cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Promotion_Result_BuybackwCond</fullName>
        <active>true</active>
        <description>For JP CRM: If Payment Method in Contract Line is Buyback w. condition, Promotion Result in Invoice Line cannot be blank.</description>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName , &quot;ASI_CRM_JP&quot;) &amp;&amp;
ISPICKVAL(ASI_CRM_Purchase_Contract_Line_Item__r.ASI_CRM_Payment_Method__c, &quot;Buyback w. condition&quot;) &amp;&amp;
ISBLANK(ASI_CRM_Sales_Result__c)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Sales_Result__c</errorDisplayField>
        <errorMessage>For Contract Line of Payment Method &apos;Buyback w. condition&apos;, Promotion Result cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Promotion_Result_FOCwCond</fullName>
        <active>true</active>
        <description>For JP CRM: If Payment Method in Contract Line is FOC w. condition, Promotion Result in Invoice Line cannot be blank.</description>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName , &quot;ASI_CRM_JP&quot;) &amp;&amp;
ISPICKVAL(ASI_CRM_Purchase_Contract_Line_Item__r.ASI_CRM_Payment_Method__c, &quot;FOC w. condition&quot;) &amp;&amp;
ISBLANK(ASI_CRM_Sales_Result__c)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Sales_Result__c</errorDisplayField>
        <errorMessage>For Contract Line of Payment Method &apos;FOC w. condition&apos;, Promotion Result cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Promotion_Result_FeewTarget</fullName>
        <active>true</active>
        <description>For JP CRM: If Payment Method in Contract Line is Promotion fee with target, Promotion Result in Invoice Line cannot be blank.</description>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName , &quot;ASI_CRM_JP&quot;) &amp;&amp;
ISPICKVAL(ASI_CRM_Purchase_Contract_Line_Item__r.ASI_CRM_Payment_Method__c, &quot;Promotion fee with target&quot;) &amp;&amp;
ISBLANK(ASI_CRM_Sales_Result__c)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Sales_Result__c</errorDisplayField>
        <errorMessage>For Contract Line of Payment Method &apos;Promotion fee with target&apos;, Promotion Result cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Promotion_Result_GiftCoupon</fullName>
        <active>true</active>
        <description>For JP CRM: If Payment Method in Contract Line is Gift Coupon, Promotion Result in Invoice Line cannot be blank.</description>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName , &quot;ASI_CRM_JP&quot;) &amp;&amp;
ISPICKVAL(ASI_CRM_Purchase_Contract_Line_Item__r.ASI_CRM_Payment_Method__c, &quot;Gift Coupon&quot;) &amp;&amp;
ISBLANK(ASI_CRM_Sales_Result__c)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Sales_Result__c</errorDisplayField>
        <errorMessage>For Contract Line of Payment Method &apos;Gift Coupon&apos;, Promotion Result cannot be blank.</errorMessage>
    </validationRules>
</CustomObject>